test/language/errors/errors_misc.hm
# 'not' can't use integer (expected boolean)
# negation '-' can't use boolean (expected number)

use "errors"

try { not 2 } except e { echo runtime(e) }

try { -false } except e { echo runtime(e) }
